--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,13 @@ first_name: Ruibo
 middle_name:
 last_name: Tu
 email: firstname at kth dot se
-description: > # the ">" symbol means to ignore newlines until "footer_text:"
-Ruibo T.
+description: Ruibo T.
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
   Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 
-url:  # the base hostname & protocol for your site
+url:  https://turuibo.github.io/turuibo/ # the base hostname & protocol for your site
 baseurl: /al-folio # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 
